@@ -1,4 +1,4 @@
-/* Copyright (C) 2011-2013 Free Software Foundation, Inc.
+/* Copyright (C) 2011-2012 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -35,7 +35,7 @@
 	.file "opaque-pointer.c"
 	.data
 	.comm p_struct,8,8
-	.global p_struct
+	.global p_struct#
 
 	.section .debug_info
 debug_info_seg1:
